# C_workhops_the_core

./: README.md
DateDavidBenitez/: CMakeLists.txt  DavidAlejandroBenitez.rar
DateDavidBenitez/include/: Date.h
DateDavidBenitez/src/: Date.cpp
MyStringDavidBenitez/: CMakeLists.txt  DavidAlejandroBenitezCuevas.rar
MyStringDavidBenitez/include/: AutoTest.h  MyString.h  argparse.h
MyStringDavidBenitez/src/: AutoTest.cpp  MyString.cpp  StringTest.cpp
MyStringDavidBenitez/template_mystring_autotest/: CMakeLists.txt  run_debug.bat  run_release.bat
Polymorfism/: CMakeLists.txt
Polymorfism/include/: Circle.h  IJSONSerializer.h  JSONBuilder.h  Point2D.h  Shape.h  Singleton.h  Square.h  Triangle.h
Polymorfism/src/: Circle.cpp  JSONBuilder.cpp  Main.cpp  Shape.cpp  Square.cpp  Triangle.cpp
